<@marcos012, @laurascclaro> implementa data com calendario

--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -7,8 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Formulario</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.0.26/css/bulma.css">
     <link href="/css/style.css" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://unpkg.com/pikaday@1.7.0/pikaday.js"></script>
+    <script src="/css/main.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/pikaday@1.7.0/css/pikaday.css">
+
 </head>
 
 <body>
@@ -190,5 +196,11 @@
     </main>
 </body>
 
+<script type="text/javascript">
+
+    document.addEventListener('DOMContentLoaded', function() {
+        var seletorDataIda = seletorDeData('#dataNascimento');
+    })
+</script>
 
 </html>
