--- a/app/src/main/resources/templates/login/login.html
+++ b/app/src/main/resources/templates/login/login.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/loginEstilo.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -17,7 +17,7 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="/">
-                <p >HospeBem</p>
+                <p class="titulo-nav">HospeBem</p>
             </a>
         </div>
 
@@ -25,7 +25,7 @@
             <div class="navbar-end">
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a class="button is-primary" href="/">
+                        <a class="button is-outlined botao-esqueci-senha" href="/">
                             <strong>Esqueci minha senha</strong>
                         </a>
                     </div>
@@ -42,7 +42,7 @@
             <div class="columns">
                 <div class="column is-half">
                     <p class="control has-icons-left has-icons-right">
-                        <input class="validate input is-primary is-rounded" id = "first_name" type="text" name="nome" placeholder="Usuário">
+                        <input class="validate input is-info is-rounded" id = "first_name" type="text" name="nome" placeholder="Usuário">
                         <span class="icon is-small is-left">
                               <i class="fas fa-user"></i>
                         </span>
@@ -52,7 +52,7 @@
             <div class="columns">
                 <div class = "column is-half">
                     <p class="control has-icons-left has-icons-right">
-                        <input class="validate input is-primary is-rounded" id="password" type="password" name="senha" placeholder="Senha">
+                        <input class="validate input is-info is-rounded" id="password" type="password" name="senha" placeholder="Senha">
                         <span class="icon is-small is-left">
                             <i class="fas fa-lock"></i>
                          </span>
@@ -60,7 +60,7 @@
                 </div>
             </div>
 
-            <button class="button is-primary is-medium is-rounded" type="submit" name="action">Entrar </button>
+            <button class="button is-info is-medium is-rounded" type="submit" name="action">Entrar </button>
 
             <div class="recuperar">
                 <p><a href="#">Esqueci minha senha</a></p>
