<@marcos012, @matheus-malta> Cadastra usuario com tipo e estiliza pg's com Bulma

--- a/app/src/main/resources/static/css/style.css
+++ b/app/src/main/resources/static/css/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: arial, sans-serif;
+    font-size: 17px;
 }
 
 .espacamento {
@@ -62,6 +63,7 @@ button {
 }
 .navbar {
     background-color: rgb(70, 178, 235);
+
 }
 
 .navbar-item {
@@ -81,5 +83,9 @@ button {
 }
 
 .titulo-nav{
-    font-size: 172%;
+    font-size: 1.5rem;
+}
+
+.titulo-h1 {
+    font-size: 2rem;
 }
