--- a/app/src/main/resources/templates/bemvindo/bemvindo.html
+++ b/app/src/main/resources/templates/bemvindo/bemvindo.html
@@ -19,12 +19,8 @@
 
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item" href="/bemvindo">Inicio</a>
-
-                <a class="navbar-item">
-                    Documentation
-                </a>
-
+                <a class="navbar-item" href="/">Inicio</a>
+                <a class="navbar-item" href="/solicitacao/hospital/lista"> Lista de Solicitações Hospital </a>
             </div>
         </div>
     </nav>
@@ -41,7 +37,7 @@
 
         <div sec:authorize="isAuthenticated()">
             <div>
-                Logado como: <strong><span sec:authentication="name"></span></strong>
+                <p> Seja bem-vindo: <strong><span sec:authentication="name"></span></strong></p>               </p>
             </div>
         </div>
 
