--- a/app/src/main/resources/templates/listaSolicitacao/listaSolicitacaoHospital.html
+++ b/app/src/main/resources/templates/listaSolicitacao/listaSolicitacaoHospital.html
@@ -31,7 +31,7 @@
                         <input type="submit" class="button is-info" value="Solicitar Vaga" />
                     </div>
                 </form>
-
+                <tr>
                 <div class="columns is-mobile is-centered">
                         <table class="table centralizar">
                             <thead>
@@ -47,11 +47,12 @@
                             <tr th:each="solicitacao : ${solicitacoesHospital}">
                                 <td th:text="${solicitacao.nome}"></td>
                                 <td>11-11-2018</td>
-                                <td>Pendente</td>
+                                <td th:text="${soliticao.status}"></td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
+                </tr>
             </div>
         </div>
     </div>
