<@ingridDuarte, @diovanemendes> Arruma cadastro de solicitacao

--- a/app/src/main/resources/templates/inicio.html
+++ b/app/src/main/resources/templates/inicio.html
@@ -1,15 +1,15 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aceleradora Ágil - Esqueleto Ambulante</title>
-</head>
-<body>
-<div class="agrupadora">
-    <header class="cabecalho">
-        <h1>Hospebem</h1>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Aceleradora Ágil - Hospebem</title>
+    </head>
+    <body>
+        <div class="agrupadora">
+            <header class="cabecalho">
+                <h1>Hospebem</h1>
+            </header>
 
     <nav class="navegacao">
         <ul>
