--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -35,14 +35,16 @@
 
             <td class="column has-text-centered">
                 <a href="/">
+                    <button class="button" type="submit">
                     <i class="fas fa-eye icons-color"></i>
+                    </button>
                 </a>
             </td>
 
             <td>
                 <form th:action="@{/solicitacao/aceitar}" method="post">
                     <input type="hidden" name="id" th:value="${solicitacao.id}">
-                    <button type="submit">
+                    <button class="button " type="submit">
                         <i class="fas fa-check icons-color"></i>
                     </button>
                 </form>
@@ -51,7 +53,7 @@
             <td>
                 <form th:action="@{/solicitacao/negar}" method="post">
                     <input type="hidden" name="id" th:value="${solicitacao.id}">
-                    <button type="submit">
+                    <button class="button" type="submit">
                         <i class="fas fa-times icons-color"></i>
                     </button>
                 </form>
