--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -25,7 +25,7 @@
 
 </header>
 
-<div>
+
 
     <div class="container">
 
@@ -35,15 +35,11 @@
 
 
                 <h2 class="subtitle is-2"> Dados do paciente</h2>
-
-
-                <form th:action="@{/solicitacao/cadastro}" th:object="${solicitacao}" method="post">
+                <form action="" th:action="@{/solicitacao/cadastro}" th:object="${solicitacao}" method="post">
                     <div class="field">
                         <div class="control">
                             <span>Nome Completo:</span>
-                            <input class="input input-fancy" name="nome" type="text"
-
-                                   th:text="${solicitacao.nome}">
+                            <input class="input input-fancy" name="nome" type="text">
                         </div>
                     </div>
 
@@ -64,7 +60,9 @@
                     <div class="field">
                         <div class="control">
                             <span>Data de nascimento:</span>
-                            <input  name="dataPaci" id="dataNascimento" placeholder="Clique para selecionar uma data" class="input input-fancy datepicker">
+                            <input  name="dataPaci" id="dataNascimento" placeholder="Clique para selecionar uma data" type="text" class="input input-fancy datepicker"
+                                    th:field="*{dataNascimento}"
+                                    onkeypress="return false;">
                         </div>
                     </div>
 
@@ -178,15 +176,12 @@
                         <div class="field">
                             <div class="control">
                                 <p> Data de nascimento <span th:text="${acompIndex.index + 1}" ></span>:
-                                    <input placeholder="Clique para selecionar uma data" class="input input-fancy datepicker"
-                                           th:field="*{acompanhantes[__${acompIndex.index}__].dataNascimento}" onkeypress="return false;">
-
+                                    <input  placeholder="Clique para selecionar uma data" class="input input-fancy datepicker" th:field="*{acompanhantes[__${acompIndex.index}__].dataNascimento}" onkeypress="return false;">
                                 </p>
 
                             </div>
                         </div>
-                    </div>
-
+                        
                 </form>
 
                 <button class="button is-success is-focused" type="submit" onclick="alert('Solicitacao enviada')">Enviar Solicitação</button>
