--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
@@ -33,35 +33,20 @@
 
 
                         <div class="is-mobile is-centered">
-                            <table class="table centralizar">
-                                <thead>
-                                <tr>
-                                    <th>Nome </th>
-                                    <th>Data de inclusão</th>
-                                    <th>Orgão</th>
-                                </tr>
-                                <tr>
-                                    <td>Shirley</td>
-                                    <td>12.05.2018</td>
-                                    <td>Coração</td>
-                                </tr>
-                                <tr>
-                                    <td>Shirley</td>
-                                    <td>12.05.2018</td>
-                                    <td>Coração</td>
-                                </tr>
-
-                                </thead>
-                            </table>
                         </div>
+                        <table class="table centralizar">
 
-                        <tr>
-                            <td class="has-text-centered">Nome</td>
-                            <td class="has-text-centered">Última Atualização</td>
-                            <td class="has-text-centered">Status</td>
-                            <td class="has-text-centered">editar</td>
-                            <td class="has-text-centered">excluir</td>
-                        </tr>
+                            <tr>
+                                <th>Nome </th>
+                                <th>Data de inclusão</th>
+                                <th>Orgão</th>
+                                <th>Editar</th>
+                                <th>Excluir</th>
+                            </tr>
+
+                            </thead>
+
+
                         <tr th:each="solicitacao : ${solicitacoesHospital}">
                             <td class="has-text-centered" th:text="${solicitacao.nome}"></td>
                             <td class="has-text-centered">11-11-2018</td>
@@ -76,7 +61,7 @@
                             <td>
                                 <form method="post">
                                     <input type="hidden" name="id">
-                                    <button class="button " type="submit">
+                                    <button class="button" type="submit">
                                         <i class="fas fa-check icons-color"></i>
                                     </button>
                                 </form>
