--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link href="/css/style.css" rel="stylesheet">
 </head>
 
@@ -38,8 +39,8 @@
 
                             <tr>
                                 <th>Nome </th>
-                                <th>Data de inclusão</th>
-                                <th>Orgão</th>
+                                <th>Última atualização</th>
+                                <th>Status</th>
                                 <th>Editar</th>
                                 <th>Excluir</th>
                             </tr>
@@ -54,15 +55,15 @@
                             <td class="column has-text-centered">
                                 <a href="/">
                                     <button class="button" type="submit">
-                                        <i class="fas fa-eye icons-color"></i>
+                                        <i class="fas fa-edit"></i>
                                     </button>
                                 </a>
                             </td>
                             <td>
                                 <form method="post">
-                                    <input type="hidden" name="id">
                                     <button class="button" type="submit">
-                                        <i class="fas fa-check icons-color"></i>
+                                        <input type="hidden" name="id">
+                                        <i class="fas fa-trash"></i>
                                     </button>
                                 </form>
                             </td>
