--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -8,60 +8,59 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 <body>
+    <header>
+        <nav class="navbar is-fixed-top is-info has-text-centered nav-style" aria-label="main navigation">
+            <label class="" >
+                HOSPEBEM
+            </label>
+        </nav>
+    </header>
 
-<header>
-    <nav class="navbar is-fixed-top is-info has-text-centered nav-style" aria-label="main navigation">
-        <label class="" >
-            HOSPEBEM
-        </label>
-    </nav>
-</header>
+    <div class="panel-block is-mobile">
+        <h1 class="padding-bottom">Lista de Solicitações Casa:</h1>
+        <table class="table pricing__table">
+            <tr class="columns">
+                <td class="column has-text-centered">Data</td>
+                <td class="column has-text-centered">Nome</td>
+                <td class="column has-text-centered">Idade</td>
+                <td class="column has-text-centered">Informações</td>
+                <td class="column has-text-centered">Aceitar</td>
+                <td class="column has-text-centered">Negar</td>
+            </tr>
+            <tr class="columns" th:each="solicitacao : ${solicitacoesCasa}">
+                <div th:if="${solicitacao.cancelamento == false}">
+                    <td class="column has-text-centered">19-8-2013</td>
+                    <td class="column has-text-centered" th:text="${solicitacao.nome}"></td>
+                    <td class="column has-text-centered">24</td>
 
-<div class="panel-block is-mobile">
-    <h1 class="padding-bottom">Lista de Solicitações Casa:</h1>
-    <table class="table pricing__table">
-        <tr class="columns">
-            <td class="column has-text-centered">Data</td>
-            <td class="column has-text-centered">Nome</td>
-            <td class="column has-text-centered">Idade</td>
-            <td class="column has-text-centered">Informações</td>
-            <td class="column has-text-centered">Aceitar</td>
-            <td class="column has-text-centered">Negar</td>
-        </tr>
-        <tr class="columns" th:each="solicitacao : ${solicitacoesCasa}">
-            <td class="column has-text-centered">19-8-2013</td>
-            <td class="column has-text-centered" th:text="${solicitacao.nome}"></td>
-            <td class="column has-text-centered">24</td>
+                    <td class="column has-text-centered">
+                        <a href="/">
+                            <button class="button" type="submit">
+                                <i class="fas fa-eye icons-color"></i>
+                            </button>
+                        </a>
+                    </td>
 
-            <td class="column has-text-centered">
-                <a href="/">
-                    <button class="button" type="submit">
-                        <i class="fas fa-eye icons-color"></i>
-                    </button>
-                </a>
-            </td>
+                    <td>
+                        <form th:action="@{/solicitacao/aceitar}" method="post">
+                            <input type="hidden" name="id" th:value="${solicitacao.id}">
+                            <button class="button " type="submit">
+                                <i class="fas fa-check icons-color"></i>
+                            </button>
+                        </form>
+                    </td>
 
-            <td>
-                <form th:action="@{/solicitacao/aceitar}" method="post">
-                    <input type="hidden" name="id" th:value="${solicitacao.id}">
-                    <button class="button " type="submit">
-                        <i class="fas fa-check icons-color"></i>
-                    </button>
-                </form>
-            </td>
-
-            <td>
-                <form th:action="@{/solicitacao/negar}" method="post">
-                    <input type="hidden" name="id" th:value="${solicitacao.id}">
-                    <button class="button" type="submit">
-                        <i class="fas fa-times icons-color"></i>
-                    </button>
-                </form>
-
-
-            </td>
-        </tr>
-    </table>
-</div>
+                    <td>
+                        <form th:action="@{/solicitacao/negar}" method="post">
+                            <input type="hidden" name="id" th:value="${solicitacao.id}">
+                            <button class="button" type="submit">
+                                <i class="fas fa-times icons-color"></i>
+                            </button>
+                        </form>
+                    </td>
+                </div>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
