--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Hospebem</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.0.26/css/bulma.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link href="/css/style.css" rel="stylesheet">
 </head>
-
 <body>
-
 <header>
     <nav class="navbar is-fixed-top is-info centralizar" aria-label="main navigation">
-
-                    <label>
-                        HOSPEBEM
-                    </label>
+        <label>
+            HOSPEBEM
+        </label>
     </nav>
 </header>
 <main>
     <div class="container">
-
         <div class="columns is-mobile is-centered">
             <div class="column">
                 <h1 class="title is-half centralizar espacamento">Lista de Solicitações</h1>
-
                 <form action="/solicitacao/cadastro">
                     <div class="is-centered is-half centralizar espacamento">
                         <input type="submit" class="button is-info" value="Solicitar Vaga" />
                     </div>
                 </form>
-
                 <div class="columns is-mobile is-centered">
-                        <table class="table centralizar">
-                            <thead>
-                            <tr>
-                                <th>Nome</th>
-                                <th>Última Atualização</th>
-                                <th>Status</th>
-
-                            </tr>
-                            </thead>
-
-                            <tbody>
-                            <tr th:each="solicitacao : ${solicitacoesHospital}">
+                    <table class="table centralizar">
+                        <tr>
+                            <th>Nome</th>
+                            <th>Última Atualização</th>
+                            <th>Status</th>
+                            <th>Cancelar</th>
+                        </tr>
+                        <tr th:each="solicitacao : ${solicitacoesHospital}">
+                            <div th:if="${solicitacao.cancelamento == false}">
                                 <td th:text="${solicitacao.nome}"></td>
                                 <td>11-11-2018</td>
                                 <td th:text="${solicitacao.status}"></td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                                <td>
+                                    <form th:action="@{/solicitacao/cancelar}" method="POST">
+                                        <input type="hidden" name="id" th:value="${solicitacao.id}">
+                                        <button class="button" type="submit">
+                                            <i class="fas fa-times icons-color"></i>
+                                        </button>
+                                    </form>
+                                </td>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
